--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,11 +1,9 @@
-<html>
-</html>
 <!DOCTYPE html>
 <html>
     <head>
         <title>My first webpage!</title>
-        <head>
+        </head>
         <body>
 
-        </body>
-      </html>
+            </body>
+            </html>
